# spymarine-cpp

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  example_utils.hpp  moving_average.cpp  print_devices.cpp  print_home_assistant_discovery.cpp  print_sensor_states.cpp
include/spymarine/: buffer.hpp  defaults.hpp  device.hpp  device_ostream.hpp  discover.hpp  error.hpp  file_descriptor.hpp  home_assistant.hpp  message.hpp  message_value.hpp  message_values_iterator.hpp  message_values_view.hpp  overloaded.hpp  parse_device.hpp  parse_error.hpp  parse_message.hpp  read_devices.hpp  sensor.hpp  sensor_reader.hpp  tcp_socket.hpp  udp_socket.hpp
src/: CMakeLists.txt  device.cpp  device_ostream.cpp  discover.cpp  error.cpp  file_descriptor.cpp  home_assistant.cpp  message.cpp  message_value.cpp  message_values_iterator.cpp  message_values_view.cpp  parse_device.cpp  parse_message.cpp  read_devices.cpp  sensor.cpp  sensor_reader.cpp  tcp_socket.cpp  udp_socket.cpp
test/: CMakeLists.txt  catch_string_maker.hpp  data.hpp  raw_data.hpp  tst_home_assistant.cpp  tst_parse_message.cpp  tst_read_devices.cpp  tst_sensor_reader.cpp
